@@ -13,6 +13,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.URI;
 import java.net.URL;
 import java.nio.channels.FileLock;
@@ -75,20 +76,6 @@ public class NetcdfFiles {
         log.info("Cant load class H4iosp", e);
     }
 
-    try {
-      registerRandomAccessFileProvider("ucar.unidata.io.http.HTTPRandomAccessFile$Provider");
-    } catch (Throwable e) {
-      if (loadWarnings)
-        log.info("Cant load class HTTPRandomAccessFileProvider", e);
-    }
-
-    try {
-      registerRandomAccessFileProvider("ucar.unidata.io.InMemoryRandomAccessFile$Provider");
-    } catch (Throwable e) {
-      if (loadWarnings)
-        log.info("Cant load class InMemoryRandomAccessFileProvider", e);
-    }
-
     // if a user explicitly registers an IOSP or RandomAccessFile implementation via
     // registerIOProvider or registerRandomAccessFileProvider, this ensures they are tried first,
     // even before the core implementations.
@@ -110,8 +97,8 @@ public class NetcdfFiles {
    * @throws InstantiationException if class doesnt have a no-arg constructor.
    * @throws ClassNotFoundException if class not found.
    */
-  public static void registerIOProvider(String className)
-      throws IllegalAccessException, InstantiationException, ClassNotFoundException {
+  public static void registerIOProvider(String className) throws NoSuchMethodException, InvocationTargetException,
+      InstantiationException, IllegalAccessException, ClassNotFoundException {
     Class<?> ioClass = NetcdfFile.class.getClassLoader().loadClass(className);
     registerIOProvider(ioClass);
   }
@@ -120,11 +107,9 @@ public class NetcdfFiles {
    * Register an IOServiceProvider. A new instance will be created when one of its files is opened.
    *
    * @param iospClass Class that implements IOServiceProvider.
-   * @throws IllegalAccessException if class is not accessible.
-   * @throws InstantiationException if class doesnt have a no-arg constructor.
-   * @throws ClassCastException if class doesnt implement IOServiceProvider interface.
    */
-  public static void registerIOProvider(Class<?> iospClass) throws IllegalAccessException, InstantiationException {
+  public static void registerIOProvider(Class<?> iospClass)
+      throws NoSuchMethodException, InvocationTargetException, InstantiationException, IllegalAccessException {
     registerIOProvider(iospClass, false);
   }
 
@@ -133,14 +118,11 @@ public class NetcdfFiles {
    *
    * @param iospClass Class that implements IOServiceProvider.
    * @param last true=>insert at the end of the list; otherwise front
-   * @throws IllegalAccessException if class is not accessible.
-   * @throws InstantiationException if class doesnt have a no-arg constructor.
-   * @throws ClassCastException if class doesnt implement IOServiceProvider interface.
    */
   private static void registerIOProvider(Class<?> iospClass, boolean last)
-      throws IllegalAccessException, InstantiationException {
+      throws NoSuchMethodException, InvocationTargetException, InstantiationException, IllegalAccessException {
     IOServiceProvider spi;
-    spi = (IOServiceProvider) iospClass.newInstance(); // fail fast
+    spi = (IOServiceProvider) iospClass.getDeclaredConstructor().newInstance(); // fail fast
     if (userLoadsFirst && !last)
       registeredProviders.add(0, spi); // put user stuff first
     else
@@ -151,12 +133,9 @@ public class NetcdfFiles {
    * Register a RandomAccessFile Provider, using its class string name.
    *
    * @param className Class that implements RandomAccessFileProvider.
-   * @throws IllegalAccessException if class is not accessible.
-   * @throws InstantiationException if class doesnt have a no-arg constructor.
-   * @throws ClassNotFoundException if class not found.
    */
-  public static void registerRandomAccessFileProvider(String className)
-      throws IllegalAccessException, InstantiationException, ClassNotFoundException {
+  public static void registerRandomAccessFileProvider(String className) throws NoSuchMethodException,
+      InvocationTargetException, InstantiationException, IllegalAccessException, ClassNotFoundException {
     Class<?> rafClass = NetcdfFile.class.getClassLoader().loadClass(className);
     registerRandomAccessFileProvider(rafClass);
   }
@@ -170,7 +149,7 @@ public class NetcdfFiles {
    * @throws ClassCastException if class doesnt implement IOServiceProvider interface.
    */
   public static void registerRandomAccessFileProvider(Class<?> rafClass)
-      throws IllegalAccessException, InstantiationException {
+      throws NoSuchMethodException, InvocationTargetException, InstantiationException, IllegalAccessException {
     registerRandomAccessFileProvider(rafClass, false);
   }
 
@@ -179,14 +158,11 @@ public class NetcdfFiles {
    *
    * @param rafClass Class that implements RandomAccessFileProvider.
    * @param last true=>insert at the end of the list; otherwise front
-   * @throws IllegalAccessException if class is not accessible.
-   * @throws InstantiationException if class doesnt have a no-arg constructor.
-   * @throws ClassCastException if class doesnt implement IOServiceProvider interface.
    */
   private static void registerRandomAccessFileProvider(Class<?> rafClass, boolean last)
-      throws IllegalAccessException, InstantiationException {
+      throws NoSuchMethodException, InvocationTargetException, InstantiationException, IllegalAccessException {
     RandomAccessFileProvider rafProvider;
-    rafProvider = (RandomAccessFileProvider) rafClass.newInstance(); // fail fast
+    rafProvider = (RandomAccessFileProvider) rafClass.getDeclaredConstructor().newInstance(); // fail fast
     if (userLoadsFirst && !last) {
       registeredRandomAccessFileProviders.add(0, rafProvider); // put user stuff first
     } else {
@@ -281,16 +257,13 @@ public class NetcdfFiles {
    * @param cancelTask allow task to be cancelled; may be null.
    * @param iospMessage special iosp tweaking (sent before open is called), may be null
    * @return NetcdfFile object, or null if cant find IOServiceProver
-   * @throws IOException if read error
-   * @throws ClassNotFoundException cannat find iospClassName in the class path
-   * @throws InstantiationException if class cannot be instantiated
-   * @throws IllegalAccessException if class is not accessible
    */
   public static NetcdfFile open(String location, String iospClassName, int bufferSize, CancelTask cancelTask,
-      Object iospMessage) throws ClassNotFoundException, IllegalAccessException, InstantiationException, IOException {
+      Object iospMessage) throws ClassNotFoundException, NoSuchMethodException, InvocationTargetException,
+      InstantiationException, IllegalAccessException, IOException {
 
     Class<?> iospClass = NetcdfFile.class.getClassLoader().loadClass(iospClassName);
-    IOServiceProvider spi = (IOServiceProvider) iospClass.newInstance(); // fail fast
+    IOServiceProvider spi = (IOServiceProvider) iospClass.getDeclaredConstructor().newInstance(); // fail fast
 
     // send iospMessage before iosp is opened
     if (iospMessage != null) {
@@ -355,8 +328,6 @@ public class NetcdfFiles {
       if (provider.isOwnerOf(location)) {
         raf = provider.open(location, buffer_size);
         Preconditions.checkNotNull(raf);
-        // TODO what if resource location cannot be reliably used to determine compression
-        // TODO can provider tell if it owns it if compressed?
         if (looksCompressed(uriString)) {
           raf = downloadAndDecompress(raf, uriString, buffer_size);
         }
@@ -370,7 +341,6 @@ public class NetcdfFiles {
         if (provider.isOwnerOf(location)) {
           raf = provider.open(location, buffer_size);
           Preconditions.checkNotNull(raf);
-          // TODO what if resource location cannot be reliably used to determine compression
           if (looksCompressed(uriString)) {
             raf = downloadAndDecompress(raf, uriString, buffer_size);
           }
@@ -392,9 +362,9 @@ public class NetcdfFiles {
       String uncompressedFileName = null;
       if (looksCompressed(uriString)) {
         try {
-          stringLocker.control(uriString); // Avoid race condition where the decompressed file is trying to be read by
-                                           // one
+          // Avoid race condition where the decompressed file is trying to be read by one
           // thread while another is decompressing it
+          stringLocker.control(uriString);
           uncompressedFileName = makeUncompressed(uriString);
         } catch (Exception e) {
           log.warn("Failed to uncompress {}, err= {}; try as a regular file.", uriString, e.getMessage());
@@ -619,7 +589,6 @@ public class NetcdfFiles {
    * @param name name of the dataset. Typically use the filename or URI.
    * @param data in-memory netcdf file
    * @return memory-resident NetcdfFile
-   * @throws java.io.IOException if error
    */
   public static NetcdfFile openInMemory(String name, byte[] data) throws IOException {
     ucar.unidata.io.InMemoryRandomAccessFile raf = new ucar.unidata.io.InMemoryRandomAccessFile(name, data);
@@ -633,17 +602,14 @@ public class NetcdfFiles {
    * @param data in-memory netcdf file
    * @param iospClassName fully qualified class name of the IOSP class to handle this file
    * @return NetcdfFile object, or null if cant find IOServiceProver
-   * @throws IOException if read error
-   * @throws ClassNotFoundException cannat find iospClassName in the class path
-   * @throws InstantiationException if class cannot be instantiated
-   * @throws IllegalAccessException if class is not accessible
    */
   public static NetcdfFile openInMemory(String name, byte[] data, String iospClassName)
-      throws IOException, ClassNotFoundException, IllegalAccessException, InstantiationException {
+      throws IOException, ClassNotFoundException, IllegalAccessException, InstantiationException, NoSuchMethodException,
+      InvocationTargetException {
 
     ucar.unidata.io.InMemoryRandomAccessFile raf = new ucar.unidata.io.InMemoryRandomAccessFile(name, data);
     Class<?> iospClass = NetcdfFile.class.getClassLoader().loadClass(iospClassName);
-    IOServiceProvider spi = (IOServiceProvider) iospClass.newInstance();
+    IOServiceProvider spi = (IOServiceProvider) iospClass.getDeclaredConstructor().newInstance();
 
     return build(spi, raf, name, null);
   }
@@ -656,7 +622,6 @@ public class NetcdfFiles {
    * @param cancelTask used to monitor user cancellation; may be null.
    * @param iospMessage send this message to iosp; may be null.
    * @return NetcdfFile or throw an Exception.
-   * @throws IOException if cannot find an IOSP for it.
    */
   public static NetcdfFile open(ucar.unidata.io.RandomAccessFile raf, String location,
       @Nullable ucar.nc2.util.CancelTask cancelTask, @Nullable Object iospMessage) throws IOException {
@@ -701,11 +666,9 @@ public class NetcdfFiles {
         // need a new instance for thread safety
         Class<?> c = registeredSpi.getClass();
         try {
-          return (IOServiceProvider) c.newInstance();
-        } catch (InstantiationException e) {
-          throw new IOException("IOServiceProvider " + c.getName() + "must have no-arg constructor.");
-        } catch (IllegalAccessException e) {
-          throw new IOException("IOServiceProvider " + c.getName() + " IllegalAccessException: " + e.getMessage());
+          return (IOServiceProvider) c.getDeclaredConstructor().newInstance();
+        } catch (Exception e) {
+          throw new IOException("IOServiceProvider failed for " + c.getName(), e);
         }
       }
     }
@@ -719,11 +682,9 @@ public class NetcdfFiles {
         if (loadedSpi.isValidFile(raf)) {
           Class<?> c = loadedSpi.getClass();
           try {
-            return (IOServiceProvider) c.newInstance();
-          } catch (InstantiationException e) {
-            throw new IOException("IOServiceProvider " + c.getName() + "must have no-arg constructor.");
-          } catch (IllegalAccessException e) {
-            throw new IOException("IOServiceProvider " + c.getName() + " IllegalAccessException: " + e.getMessage());
+            return (IOServiceProvider) c.getDeclaredConstructor().newInstance();
+          } catch (Exception e) {
+            throw new IOException("IOServiceProvider ServiceLoader failed for " + c.getName(), e);
           }
         }
       }
@@ -777,9 +738,7 @@ public class NetcdfFiles {
   }
 
   ///////////////////////////////////////////////////////////////////////
-  // All CDM naming convention enforcement should be here.
-  // DAP conventions should be in DODSNetcdfFile
-  // TODO move this elsewhere.
+  // All CDM naming convention enforcement are here.
 
   // reservedFullName defines the characters that must be escaped
   // when a short name is inserted into a full name
